feat: add usip document

--- a/src/docs/guides/general/server/usip.en-US.mdx
+++ b/src/docs/guides/general/server/usip.en-US.mdx
@@ -1,4 +1,6 @@
-# Introduction to USIP
+# Univer Server Integration Protocol
+
+## Introduction to USIP
 
 USIP: Univer Server Integration Protocol
 
@@ -30,10 +32,10 @@ In this way, while ensuring that data remains within the third-party client syst
 
 ```shell
 curl -X GET \
-    -H "authorization: xx" \
-    -H "cookie: xx" \
-    -H "YOUR-CUSTOM-HEADER: xx" \
-    "http://localhost:8080/credential"
+  -H "authorization: xx" \
+  -H "cookie: xx" \
+  -H "YOUR-CUSTOM-HEADER: xx" \
+  "http://localhost:8080/credential"
     
 # response
 {
