--- a/src/docs/guides/general/server/usip.zh-CN.mdx
+++ b/src/docs/guides/general/server/usip.zh-CN.mdx
@@ -1,4 +1,6 @@
-# USIP 介绍
+# Univer Server 集成协议
+
+## USIP 介绍
 
 USIP: Univer Server Integration Protocol (Univer 服务集成协议) ，
 
@@ -30,10 +32,10 @@ Univer Server 基于这一系列协议可以访问第三方系统，以获得客
 
 ```shell
 curl -X GET \
-    -H "authorization: xx" \
-    -H "cookie: xx" \
-    -H "YOUR-CUSTOM-HEADER: xx" \
-    "http://localhost:8080/credential"
+  -H "authorization: xx" \
+  -H "cookie: xx" \
+  -H "YOUR-CUSTOM-HEADER: xx" \
+  "http://localhost:8080/credential"
     
 # response
 {
