fix: ci feature branch

--- a/src/docs/guides/general/server/usip.en-US.mdx
+++ b/src/docs/guides/general/server/usip.en-US.mdx
@@ -23,7 +23,7 @@ In this way, while ensuring that data remains within the third-party client syst
 1. The integrating party needs to maintain the relationship between users and documents on their own. Univer Server acts as the client to obtain user permissions under documents through an interface.
 2. Implementation: Upon successfully creating a document by calling Univer Server, it returns a `unitID` document ID. The integrating party needs to store this ID to manage their own document management operations effectively.
 
-## **Required Interfaces**
+## Required Interfaces
 
 1. Credential verify: Verify user identity legality (AuthN)
 
