docs: change img size

--- a/src/docs/guides/general/server/usip.en-US.mdx
+++ b/src/docs/guides/general/server/usip.en-US.mdx
@@ -1,3 +1,7 @@
+import Image from '@/components/Image'
+import relationshipImg from './usip/usip-relationship.png'
+import flowchartImg from './usip/usip-flowchart.png'
+
 # Univer Server Integration Protocol
 
 ## Introduction to USIP
@@ -15,8 +19,9 @@ Based on these protocols, Univer Server can access third-party systems to obtain
 
 In this way, while ensuring that data remains within the third-party client system, Univer Server can successfully integrate into the client's system.
 
-![relationship](./usip/usip-relationship.png)
-![api call flowchart](./usip/usip-flowchart.png)
+<Image src={relationshipImg} alt="relationship" width={500} />
+
+<Image src={flowchartImg} alt="api call flowchart" width={500} />
 
 ## Prerequisites
 
