docs: optimize text

--- a/src/docs/blog/post/ot.zh-CN.mdx
+++ b/src/docs/blog/post/ot.zh-CN.mdx
@@ -498,4 +498,4 @@ Univer 的[架构](/guides/general/architecture/univer)全面引入了[依赖注
 
 话虽如此，由于 Univer 的协同编辑是以插件的形式工作的，并不和 OT 强绑定，我们也乐于见到社区将 Univer 作为 playground 探索基于 CRDT 的电子表格协同。
 
-<p className="text-gray-500 text-sm mt-8">作者：[Wenzhao Hu](https://github.com/wzhudev)，Univer 技术 Leader</p>
+<p className="text-gray-500 text-sm mt-8">作者：[Wenzhao Hu](https://github.com/wzhudev)，Head of Engineering</p>
