--- a/src/docs/blog/post/di.zh-CN.mdx
+++ b/src/docs/blog/post/di.zh-CN.mdx
@@ -19,7 +19,7 @@ Univer 的架构上的复杂度来自于以下几个方面：
 2. **多端同构**。Univer 作为客户端，需要运行在桌面端和移动端浏览器中；作为计算引擎，需要运行在 web worker 当中；作为协同服务器，需要运行在 Node.js 当中。我们需要在尽可能地在多端复用模块。
 3. **高度的可扩展性和定制性**。Univer 不是办公套件，而是创建办公套件的 SDK。 Univer 的功能都以插件的形式作为核心的扩展，并且插件需要允许外部代码修改甚至是完全覆写自己的行为。
 
-在设计 Univer 的架构的过程中，我们团队引入了依赖注入（Dependency Injection, DI）来应对上面所列举出的复杂度。这篇文章将介绍 DI 在 Univer 中的实践。
+在设计 Univer 的架构的过程中，我们团队引入了[依赖注入](https://zh.wikipedia.org/wiki/%E4%BE%9D%E8%B5%96%E6%B3%A8%E5%85%A5)（Dependency Injection, DI）来应对上面所列举出的复杂度。这篇文章将介绍 DI 在 Univer 中的实践。
 
 <Callout>
 如果你还不了解依赖注入概念，可以阅读[这篇文章](https://redi.wendell.fun/zh-CN/blogs/di)。
