--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -105,8 +105,9 @@ Of course, you may want more than just the basics. If you're looking to add feat
         <script src="https://unpkg.com/@univerjs-pro/sheets-print/lib/umd/index.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/@univerjs-pro/sheets-print/lib/index.css">
 
+        <script src="https://unpkg.com/@univerjs-pro/exchange-client/lib/umd/index.js"></script>
         <script src="https://unpkg.com/@univerjs-pro/sheets-exchange-client/lib/umd/index.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs-pro/sheets-exchange-client/lib/index.css">
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs-pro/exchange-client/lib/index.css">
         <style>
           body {
             margin: 0;
@@ -139,7 +140,7 @@ Of course, you may want more than just the basics. If you're looking to add feat
             Promise.all([
               fetch('https://unpkg.com/@univerjs-pro/collaboration-client/lib/locale/en-US.json').then(res => res.json()),
               fetch('https://unpkg.com/@univerjs-pro/sheets-print/lib/locale/en-US.json').then(res => res.json()),
-              fetch('https://unpkg.com/@univerjs-pro/sheets-exchange-client/lib/locale/en-US.json').then(res => res.json())
+              fetch('https://unpkg.com/@univerjs-pro/exchange-client/lib/locale/en-US.json').then(res => res.json())
             ]).then(([
               collaborationLocale,
               printLocale,
