--- a/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -105,8 +105,9 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
         <link rel="stylesheet" href="https://unpkg.com/@univerjs-pro/sheets-print/lib/index.css">
 
         <script src="https://unpkg.com/@univerjs-pro/exchange-client/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs-pro/sheets-exchange-client/lib/umd/index.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/@univerjs-pro/exchange-client/lib/index.css">
+
+        <script src="https://unpkg.com/@univerjs-pro/sheets-exchange-client/lib/umd/index.js"></script>
         <style>
           body {
             margin: 0;
@@ -198,6 +199,8 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
               UniverCollaborationClient,
               UniverSheetsThreadComment,
               UniverSheetsFormula: { UniverSheetsFormulaPlugin },
+              UniverExchangeClient,
+              UniverSheetsExchangeClient: { UniverSheetsExchangeClientPlugin },
             } = window
 
             var univer = new UniverCore.Univer({
@@ -288,7 +291,7 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
             univer.registerPlugin(UniverSheetsPrint.UniverSheetsPrintPlugin)
 
             // config import & export endpoint
-            const { EXCHANGE_UPLOAD_FILE_SERVER_URL_KEY, EXCHANGE_IMPORT_SERVER_URL_KEY, EXCHANGE_EXPORT_SERVER_URL_KEY, EXCHANGE_GET_TASK_SERVER_URL_KEY, EXCHANGE_SIGN_URL_SERVER_URL_KEY } = UniverSheetsExchangeClient;
+            const { EXCHANGE_UPLOAD_FILE_SERVER_URL_KEY, EXCHANGE_IMPORT_SERVER_URL_KEY, EXCHANGE_EXPORT_SERVER_URL_KEY, EXCHANGE_GET_TASK_SERVER_URL_KEY, EXCHANGE_SIGN_URL_SERVER_URL_KEY } = UniverExchangeClient;
             configService.setConfig(EXCHANGE_UPLOAD_FILE_SERVER_URL_KEY, `http://${universerEndpoint}/universer-api/stream/file/upload`);
             configService.setConfig(EXCHANGE_IMPORT_SERVER_URL_KEY, `http://${universerEndpoint}/universer-api/exchange/{type}/import`);
             configService.setConfig(EXCHANGE_EXPORT_SERVER_URL_KEY, `http://${universerEndpoint}/universer-api/exchange/{type}/export`);
@@ -296,7 +299,7 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
             configService.setConfig(EXCHANGE_SIGN_URL_SERVER_URL_KEY, `http://${universerEndpoint}/universer-api/file/{fileID}/sign-url`);
 
             // import & export
-            univer.registerPlugin(UniverSheetsExchangeClient.UniverSheetsExchangeClientPlugin)
+            univer.registerPlugin(UniverSheetsExchangeClientPlugin)
           }
         </script>
       </body>
