--- a/src/docs/guides/sheet/getting-started/i18n.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/i18n.en-US.mdx
@@ -18,6 +18,7 @@ import UIEnUS from '@univerjs/ui/locale/en-US';
 import DocsUIEnUS from '@univerjs/docs-ui/locale/en-US';
 import SheetsEnUS from '@univerjs/sheets/locale/en-US';
 import SheetsUIEnUS from '@univerjs/sheets-ui/locale/en-US';
+import SheetsFormulaEnUS from '@univerjs/sheets-formula/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
@@ -27,6 +28,7 @@ const univer = new Univer({
       SheetsEnUS,
       DocsUIEnUS,
       SheetsUIEnUS,
+      SheetsFormulaEnUS,
       UIEnUS,
       DesignEnUS,
     ),
