--- a/src/docs/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.en-US.mdx
@@ -99,6 +99,7 @@ import UIEnUS from '@univerjs/ui/locale/en-US';
 import DocsUIEnUS from '@univerjs/docs-ui/locale/en-US';
 import SheetsEnUS from '@univerjs/sheets/locale/en-US';
 import SheetsUIEnUS from '@univerjs/sheets-ui/locale/en-US';
+import SheetsFormulaEnUS from '@univerjs/sheets-formula/locale/en-US';
 ```
 
 <Callout type="info" emoji="ℹ️">
@@ -116,6 +117,7 @@ const univer = new Univer({
       SheetsEnUS,
       DocsUIEnUS,
       SheetsUIEnUS,
+      SheetsFormulaEnUS,
       UIEnUS,
       DesignEnUS,
     ),
