--- a/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -99,6 +99,7 @@ import UIZhCN from '@univerjs/ui/locale/zh-CN';
 import DocsUIZhCN from '@univerjs/docs-ui/locale/zh-CN';
 import SheetsZhCN from '@univerjs/sheets/locale/zh-CN';
 import SheetsUIZhCN from '@univerjs/sheets-ui/locale/zh-CN';
+import SheetsFormulaZhCN from '@univerjs/sheets-formula/locale/zh-CN';
 ```
 
 <Callout type="info" emoji="ℹ️">
@@ -116,6 +117,7 @@ const univer = new Univer({
       SheetsZhCN,
       DocsUIZhCN,
       SheetsUIZhCN,
+      SheetsFormulaZhCN,
       UIZhCN,
       DesignZhCN,
     ),
