--- a/src/docs/guides/sheet/features/hyperlink.en-US.mdx
+++ b/src/docs/guides/sheet/features/hyperlink.en-US.mdx
@@ -1,5 +1,8 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import Sandbox from '@/components/Sandbox'
+
+import entryFile from './hyperlink/demo-1/index.txt'
 
 # HyperLink
 
